--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 SECRET_KEY=SECRET_KEY
 DEBUG=DEBUG
+ALLOWED_HOSTS=ALLOWED_HOSTS
 
-DB_NAME=DB_NAME
 DB_USER=DB_USER
 DB_PASSWORD=DB_PASSWORD
+DB_NAME=DB_NAME
+DB_HOST=DB_HOST
+DB_PORT=DB_PORT
 
 EMAIL_HOST_USER=EMAIL_HOST_USER
 EMAIL_HOST_PASSWORD=EMAIL_HOST_PASSWORD
