--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ DB_PORT=DB_PORT
 
 EMAIL_HOST_USER=EMAIL_HOST_USER
 EMAIL_HOST_PASSWORD=EMAIL_HOST_PASSWORD
+
+CELERY_BROKER_URL=CELERY_BROKER_URL
+REDIS_URL=REDIS_URL
